NetBSD Problem Report #52620

From www@NetBSD.org  Sat Oct 14 22:21:33 2017
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 95CDD7A16A
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 14 Oct 2017 22:21:33 +0000 (UTC)
Message-Id: <20171014222132.846F27A234@mollari.NetBSD.org>
Date: Sat, 14 Oct 2017 22:21:32 +0000 (UTC)
From: dhgutteridge@sympatico.ca
Reply-To: dhgutteridge@sympatico.ca
To: gnats-bugs@NetBSD.org
Subject: 8.0_BETA/amd64 kernel panic when pf module loading is specified via boot.cfg
X-Send-Pr-Version: www-1.0

>Number:         52620
>Category:       kern
>Synopsis:       8.0_BETA/amd64 kernel panic when pf module loading is specified via boot.cfg
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    pgoyette
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Oct 14 22:25:00 +0000 2017
>Closed-Date:    Wed Oct 25 07:04:46 +0000 2017
>Last-Modified:  Wed Oct 25 07:05:01 +0000 2017
>Originator:     David H. Gutteridge
>Release:        8.0_BETA/amd64
>Organization:
>Environment:
NetBSD 8.0_BETA (GENERIC.201709170600Z) amd64
>Description:
When I specify "load=pf" in the machine in question's boot.cfg file,
I get the following kernel panic:

NetBSD 8.0_BETA (GENERIC.201709170600Z)
total memory = 3551 MB
avail memory = 3426 MB
running cgd selftest aes-xts-256 aex-xts-512 done
panic: kernel diagnostic assertion "off < percpu_nextoff" failed: file "/usr/src/sys/kern/subr_percpu.c", line 76
fatal breakpoint trap in supervisor mode
trap type 1 code 0 rip 0xffffffff80224a85 cs 0x8 rflags 0x246 cr2 0 ilevel 0x8 rsp 0xffffffff81842c50
curlwp 0xffffffff81481a40 pid 0.1 lowest kstack 0xffffffff8183f2c0
Stopped in pid 0.1 (system) at  netbsd:breakpoint+0x5:  leave
db{0}> bt
breakpoint() at netbsd:breakpoint+0x5
vpanic() at netbsd:vpanic+0x140
ch_voltag_convert_in() at netbsd:ch_voltag_convert_in
percpu_offset.part.0() at netbsd:percpu_offset.part.0+0x2d
percpu_getref() at netbsd:percpu_getref+0x3c
cprng_fast32() at netbsd:cprng_fast32()+0x19
pfattach() at pf:pfattach+0x316
pf_modcmd() at pf:pf_modcmd+0x62
module_do_load() at netbsd:module_do_load=0x5ee
module_init_class() at netbsd:module_init_class+0xef
main() at netbsd:main+0x288

(This isn't necessarily required, since I can successfully get pf to
load as a module by specifying such in rc.conf. But I thought I'd
mention this.)

>How-To-Repeat:
Add "load=pf" to a boot.cfg file.

>Fix:
Unknown.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->pgoyette
Responsible-Changed-By: pgoyette@NetBSD.org
Responsible-Changed-When: Sat, 14 Oct 2017 22:59:27 +0000
Responsible-Changed-Why:
Take


From: "Paul Goyette" <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52620 CVS commit: src/sys/dist/pf/net
Date: Sun, 15 Oct 2017 04:30:05 +0000

 Module Name:	src
 Committed By:	pgoyette
 Date:		Sun Oct 15 04:30:05 UTC 2017

 Modified Files:
 	src/sys/dist/pf/net: pf_ioctl.c

 Log Message:
 Defer initialization of pf_status.host_id

 The call to cprng_fast32() requires that per-cpu data has been initialized
 by corng_fast_init(), which doesn't get called until after the first part
 of auto-configuration is done, long after pfattach() calls cprng_fast32().

 Fixed PR kern/52620

 XXX This needs pull-up to the -8 branch.


 To generate a diff of this commit:
 cvs rdiff -u -r1.51 -r1.52 src/sys/dist/pf/net/pf_ioctl.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Sun, 15 Oct 2017 04:49:49 +0000
State-Changed-Why:
Fix committed to HEAD, waiting for pullup ticket #8-322


State-Changed-From-To: pending-pullups->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Mon, 23 Oct 2017 21:47:19 +0000
State-Changed-Why:
Pullup completed


State-Changed-From-To: closed->pending-pullups
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Mon, 23 Oct 2017 21:49:45 +0000
State-Changed-Why:
Ooops - still waiting for pullup to netbsd-8 branch


State-Changed-From-To: pending-pullups->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Wed, 25 Oct 2017 07:04:46 +0000
State-Changed-Why:
Pull-up is now complete


From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52620 CVS commit: [netbsd-8] src/sys/dist/pf/net
Date: Wed, 25 Oct 2017 07:01:19 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Wed Oct 25 07:01:19 UTC 2017

 Modified Files:
 	src/sys/dist/pf/net [netbsd-8]: pf_ioctl.c

 Log Message:
 Pull up following revision(s) (requested by pgoyette in ticket #322):
 	sys/dist/pf/net/pf_ioctl.c: revision 1.52
 Defer initialization of pf_status.host_id
 The call to cprng_fast32() requires that per-cpu data has been initialized
 by corng_fast_init(), which doesn't get called until after the first part
 of auto-configuration is done, long after pfattach() calls cprng_fast32().
 Fixed PR kern/52620


 To generate a diff of this commit:
 cvs rdiff -u -r1.51 -r1.51.10.1 src/sys/dist/pf/net/pf_ioctl.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.